--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -28,11 +23,22 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.originalText {
+  flex: 1;
+  width: 50%;
+  height: 200px;
+  word-wrap: normal;
+  margin-left: 25%;
+  margin-right: 25%;
+  overflow: scroll;
+}
+
+.tweet {
+  display: flex;
+  word-wrap: normal;
+  margin-left: 25%;
+  margin-right: 25%;
+  margin-bottom: 1%;
+  justify-content: center;
+  background-color: #61dafb;
 }
